--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
 {
   "functions": {
     "api/bot.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "@vercel/node@3.0.7"
     }
   },
   "rewrites": [
