--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "toxic-telegram-bot",
   "version": "1.0.0",
   "description": "An advanced OSINT bot for Telegram",
-  "main": "api/bot.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node api/bot.js"
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "mongodb": "^6.5.0",
     "telegraf": "^4.16.3"
   }
